--- a/public/index.html
+++ b/public/index.html
@@ -16,12 +16,12 @@
 
     <script>
         let { reactive, effect } = VueReactivity;
-        let obj = {name:'aaa',age:11}
+        let obj = {name:'aaa',age:11,arr:[1,2,3,4,5]}
         let state = reactive(obj); // 通过代理后的对象来进行操作
         // effect 副作用， 默认一加载就执行
-
         effect(()=>{
-            app.innerHTML = state.name +'今年' + state.age +'岁'
+            // app.innerHTML = state.name +'今年' + state.age +'岁'
+            app.innerHTML = state.arr[4]
         });
         // 对数据进行劫持操作 vue2 Object.defineProperty  Vue3里用的是proxy
         // vue中当页面渲染时 会做依赖收集  vue2 属性收集的是watcher，vue3 属性收集的是effect
